@startuml
skinparam class {
    BackgroundColor White
    BorderColor Black
}
hide circle
hide methods

'============== Classes ==============
class User {
  int id
  string nom
  string prenom
  string email
  string password
  int role_id
}

class Role {
  int id
  string nom
  datetime created_at
  datetime updated_at
}

class Article {
  int id
  string titre
  string slug
  string extrait
  text contenu
  string image
  int vues
  int likes
  enum status // brouillon, a_valider, publie
  int user_id
}

class Commentaire {
  int id
  text contenu
  int article_id
  int user_id
}

class Categorie {
  int id
  string nom
  string slug
}

class ArticleCategorie {
  int article_id
  int categorie_id
}

class Favoris {
  int id
  int user_id
  int article_id
}

'============== NEW : Tags ==============
class Tag {
  int id
  string nom
  string slug
}

class ArticleTag {
  int article_id
  int tag_id
}

'============== Relations ==============

User "1" -- "N" Article : crée
User "1" -- "N" Commentaire : écrit
Article "1" -- "N" Commentaire : reçoit

User "1" -- "N" Favoris : ajoute >
Article "1" -- "N" Favoris : favorisé >

Categorie "N" -- "N" Article : tague >
ArticleCategorie .. Categorie
ArticleCategorie .. Article

'============== Relations Tags ==============
Tag "N" -- "N" Article : étiquette >
ArticleTag .. Tag
ArticleTag .. Article

'============== Relation User <-> Role ==============
Role "1" -- "N" User : attribue >

@enduml
